@@ -1,23 +1,0 @@
-g: ENC[AES256_GCM,data:TH5TNxZwmZGfJ7RrgzT9ur9MrlVATq5/jNDvThSSs+SLkOBMBEB07Z7F81b4CmKzNsaFv1ObFMvk0lzKakU+7B3IAroVsZUzSQ==,iv:ijXTW1TsxHQNM19ZSBOGfsDOWhjCtZiPoBOwdIkAzO0=,tag:TIz7HcQK7dbpCfZTOW5n9Q==,type:str]
-wg0_conf: ENC[AES256_GCM,data:A2x7cqZS6fkdeDxX3mEKDjgCpFcegW7OksKPZiDmPk4QY3vSG8NjrZODKO7SzgcoHMvtMnHz/KEW0A9kb0peE6mGLsyoyIlkiJDebdoydzN9/yJm0tpoMIVr6pSDOk0ryfGUSqnamytbE8HXvCX2DtRuEczZRSPKDC7nZom1ua8rrAYZr0ouVDBfOpv82YFmuLmTYSkCWf94V2TRDdxFmPftq1FSBKeTkoYOW3ADWKZKykAPtq2HlEyX5q0rUOx2WTLxrHRK574ASk4KpRrV5TSjLW75ax3ovIxkYr1lHJG4n/8Z7bR0OhlbfaC6Tr9T1+o2otKOiYHG/STY4+ClnrjL66mqoWgJ2qKWYCqwpBGHpuIKvEva5aMR+86h/RU76AWrJQ==,iv:vu/YsxbEptIKE3rhpY2G0JTSNowJXQm/KwVCUrcFMkY=,tag:BYFNI+bbTge/FDB+Hwl+dg==,type:str]
-wg1_conf: ENC[AES256_GCM,data:af34gNT9WDVuObc06xh9EDpY2JhlAxTFso0JZKkn9IYHuUm3Cl9dg/YdUYa1K/mQXj5U2dZ8AYURWARufNS4aRhmvPvmLuz2Th6NIeZYghaZKxvvDare6hyaVuRL/jPsmY1F1as2mL1NqDPbRMjWSssPIa0sul47AsCZRXvCqkoK/PV9BD0LwUn6S/0ymaDliyNT+tUEEkXon/Aw8kTCEXXHaUIrQs7L6R9lPSs/yiRdxNAgScRtlcVIxkhmSUW8FTZUW6gMQyP//o5x9o1vsXedP6+QocK31Piwdgg32CfCUmVqsbF4uNFcsj4Wn1FI6AkaJHD+Ja0viSsmvjIggXnJ31+EKq/+peFCqLlymCA=,iv:Fin6jADmZsW9PU36JhjJrs+jxS9I9Ql5NYcM5RASNkw=,tag:jGMPc3yWAcJ+ie0GQ9X6+A==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age13mj768x90kcw2m80d0v3px5v2kvhf9dq63a40xxjgyt75kcv0assr0u8eu
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0ZnUwMHE0Q0p6TmxsZXhR
-            MHdLUldUWEt5ME4rQmg5enowQ3JqOHI2dnowCk5HcldvTCt1ZDdtV0FuWnBlWWMv
-            U1k5SmIwcnBydWJxemFmcGIrU29POUUKLS0tICt4VGQ2OVdLbDljalg1WnprTzRr
-            U1o4N2VCNEhTY2JTK3RFUTdpRUNFNWMKHHGvEF1YpNFlbE+8HND+o4vf+hhiljc1
-            ZwT4NuiNCDiA9JAASKu9xqUUxoVqwPFfD5t8I6FQakBzm3kLnvUQcg==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T18:42:36Z"
-    mac: ENC[AES256_GCM,data:slTBYg42vFGYPuOcKsoCf5zCQ5tvZh6WFnOEp8LVHAt4eVmawnS2V90CBRn/dI2VFyre6v8G76+QTRK5GtNRU9CSKR/9BZHIWfPqCXEHz3ONtawoSsApayb3NpUgbwnGYYNbwvRvwExKTRpsufBNgc5dZsftOLYOGT2bEj1JG/A=,iv:vmH+hKulPk7WlbLVwflazWvKMJFnKpyIEl+I7A/wByc=,tag:nw9ClU+en8inlMRdc6cMYg==,type:str]
-    pgp: []
-    unencrypted_suffix: _unencrypted
-    version: 3.9.2
