@@ -1,0 +1,34 @@
+{ lib, wallpapers, icons, ... }:
+let
+  inherit (builtins) fetchurl;
+  inherit (lib) mkDefault;
+in
+{
+  programs = {
+    firefox.theme = {
+      name = "shyfox";
+      config.wallpaper = fetchurl wallpapers.pixel-earth;
+    };
+  };
+
+  stylix = {
+    colorScheme = "ashes";
+    image = fetchurl wallpapers.black-hole;
+  };
+
+  services.swww.slideshow = {
+    enable = mkDefault true;
+    interval = mkDefault 300;
+    images = mkDefault (with wallpapers; [
+      (fetchurl black-hole)
+      (fetchurl pixel-galaxy)
+      (fetchurl galaxy-2)
+      (fetchurl galaxy)
+      (fetchurl nebula)
+      (fetchurl nebula-2)
+      (fetchurl blue-marble)
+      (fetchurl blue-marble-2)
+      (fetchurl blue-marble-3)
+    ]);
+  };
+}
