@@ -1,6 +1,7 @@
 # caps lock = escape when tapped and META when held
 {
   services.keyd = {
+    enable = true;
     keyboards = {
       default = {
         ids = [ "*" ];
